# d-lang

./: .gitignore  pyproject.toml
src/: Lexer.py  Parser.py  Token.py  TokenType.py  errors.py  main.py
src/AST/: BinOperationNode.py  NumberNode.py  StatementsNode.py  UnarOperationNode.py  VariableNode.py
