[tool.poetry]
name = "d-lang"
version = "0.1.0"
description = "My little programming language"
authors = ["dmitriyvek <dmitriyvek@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
